--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ footer{
       <div class="tool-card">
         <h5>SIM Information Lookup</h5>
         <p>Check SIM details</p>
-        <a href="word-counter.html">Open Tool</a>
+        <a href="sim database.html">Open Tool</a>
       </div>
     </div>
 
